--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,6 +1,8 @@
 @import './reset.css';
 @import './main';
 @import './login-form';
+@import './player-list-item';
+@import './main-screen';
 
 * {
     box-sizing: border-box;
