--- a/frontend/src/styles/_login-form.scss
+++ b/frontend/src/styles/_login-form.scss
@@ -6,6 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    &_hidden {
+        display: none;
+    }
 
     &__card {
         display: flex;
@@ -15,7 +19,22 @@
         height: 240px;
         padding: 24px;
         border-radius: 4px;
+        position: relative;
         background-color: $white;
+        
+        &-foreground {
+            height: 100%;
+            width: 100%;
+            background-color: rgba(74,74,74,0.3);
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: none;
+            
+            &_visible {
+                display: block;
+            }
+        }
 
         &-title {
             font-size: 18px;
@@ -47,7 +66,7 @@
         }
 
         &-button {
-            background-color: #FF6600;
+            background-color: $orange;
             font-weight: 600;
             color: $white;
             border-radius: 4px;
@@ -58,7 +77,7 @@
 
             &:hover {
                 cursor: pointer;
-                background-color: #FF8800;
+                background-color: rgba($orange, 0.87);
             }
         }
     }
