--- a/frontend/src/styles/_login-form.scss
+++ b/frontend/src/styles/_login-form.scss
@@ -71,8 +71,9 @@
             color: $white;
             border-radius: 4px;
             font-size: 18px;
-            padding: 16px 36px;
+            padding: 12px 36px;
             border: none;
+            outline: none;
             @include box-shadow;
 
             &:hover {
