--- a/frontend/src/styles/_main-screen.scss
+++ b/frontend/src/styles/_main-screen.scss
@@ -1,8 +1,12 @@
 @import './variables';
 
 .main-screen {
-    display: flex;
+    display: none;
     height: 100%;
+    
+    &_visible {
+        display: flex;
+    }
     
     &__left-aside {
         flex: 0 0 300px;
@@ -61,9 +65,14 @@
             user-select: none;
             font-weight: 600;
             
-            &:hover {
+            &:hover:not(&_disabled) {
                 cursor: pointer;
                 background-color: rgba(green, 0.5);
+            }
+            
+            &_disabled {
+                cursor: unset;
+                background-color: lightgray;
             }
         }
     }
